--- a/frontend/public/src/custom.css
+++ b/frontend/public/src/custom.css
@@ -1,3 +1,6 @@
+@import "https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css";
+@import "https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css";
+@import "https://rsms.me/inter/inter.css";
 p.testing {
     font-family: roboto;
 }
