--- a/frontend/public/src/custom.css
+++ b/frontend/public/src/custom.css
@@ -1,19 +1,19 @@
-@import "https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css";
+
 @import "https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css";
 @import "https://rsms.me/inter/inter.css";
-p.testing {
+/* p.testing {
     font-family: roboto;
 }
 
 body {
     font-family: Lexend, sans-serif;
-    margin: 0;
+     margin: 0;
     padding: 0;
     display: flex;
     flex-direction: column;
     height: 100vh;
-    background-color: #f5f5f5;
-    width: 100vw;
+    background-color: #f5f5f5; 
+    width: 100vw; 
 }
 
 .chat-window {
@@ -74,7 +74,7 @@ body {
 .groupBtn:hover{
     size: 110%;
 }
-
+ */
 
 @keyframes fadeIn {
     from {
@@ -91,7 +91,7 @@ body {
     animation: fadeIn 0.5s ease-in-out;
     overflow-wrap: break-word;
 }
-
+/* 
 .online-content .friends-content .groups-content {
     animation: fadeIn 0.5s ease-in-out;
 }
@@ -140,7 +140,7 @@ rust code jumpscare:
 fn main() {
 println!("hihi");
 }
-*/
+*//*
 
 .copy-icon {
     width: 12px;
@@ -149,12 +149,12 @@ println!("hihi");
     fill: grey;
     cursor: pointer;
 }
-/* Hide the default file input */
+/* Hide the default file input *//*
 #file-upload {
     display: none;
   }
   
-  /* Style the custom label as the button */
+  /* Style the custom label as the button *//*
   .custom-file-upload {
     display: inline-block;
     padding: 10px 20px;
@@ -167,7 +167,7 @@ println!("hihi");
     border: none;
   }
   
-  /* Add a hover effect for the custom button */
+  /* Add a hover effect for the custom button *//*
   .custom-file-upload:hover {
     background-color: #0056b3;
   }
@@ -200,4 +200,4 @@ println!("hihi");
     color:#272727;
     size: 110%;
     transition: text-decoration 0.3s ease-in-out, size 0.3s ease-in-out;
-  }
+  } */
