--- a/input.css
+++ b/input.css
@@ -1,3 +1,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@font-face {
+    font-family: 'Victor Mono';
+    src: url('/public/src/fonts/VictorMono-Regular.ttf') format('truetype'),
+         url('/public/src/fonts/VictorMono-Italic.ttf') format('truetype'),
+         url('/public/src/fonts/VictorMono-Bold.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+  }
